--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -14,6 +14,4 @@ $color3: rgba(0, 1, 3, 1);
 $color4: rgba(51, 49, 56, 1);
 $color5: rgba(242, 82, 50, 1);
 
-$desktop: (
-    navBarHeight: 80px
-);
+$navBarHeight: 80px;
